[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name            = "diomede"
version         = "0.1.0"
requires-python = ">=3.12"
description     = "Dynamic DICOM endpoint routing for the Diomede framework."

[project.optional-dependencies]
orchestrator = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "redis>=5.2",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
]
edge    = ["httpx>=0.27.2"]
scripts = ["httpx>=0.27.2", "pydicom>=2.4", "python-dotenv>=1.0"]
load    = ["locust>=2.28"]
test = [
    "pytest>=9",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",
    "fakeredis>=2.23",
    "pydicom>=2.4",
    "httpx>=0.27",
    "redis>=5",
]
dev = [
    "ruff>=0.15.8",
    "mypy>=1.10",
    "types-redis",
    "pre-commit>=4",
]

[tool.setuptools.packages.find]
where = ["."]

# ── Tooling ──────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["generate", "send_test_dicom"]
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
pythonpath   = ["."]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: requires a running Docker Compose stack",
]
addopts = "-ra -q"
